--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -32,3 +32,30 @@
     /* surround with whitespace */
     margin: 20px;
 }
+
+table {
+    margin-left: auto;
+    margin-right: auto;
+}
+
+tr:nth-child(even) {
+    background: #eeeeee;
+}
+
+tr:nth-child(1) {
+    background: #333333;
+    color: #ffffff;
+}
+
+th, td {
+    padding: 5px;
+}
+
+td.price, td.value {
+    text-align: right;
+    font-family: monospace;
+}
+
+td.shares {
+    text-align: center;
+}
